# worktree-admin

./: Cargo.toml  Cross.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: release.yml
src/: app.rs  gitignore.rs  main.rs  ui.rs  worktree.rs
src/ui/: footer.rs  header.rs  mod.rs  worktree_list.rs
src/ui/dialogs/: create.rs  error.rs  ignored_files.rs  mod.rs
