[package]
name = "worktree-admin"
version = "0.1.1"
description = "github worktree admin"
authors = ["takaya-ishiyama <takaya.ishiyama00810@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
dirs = "5.0"
anyhow = "1.0"
git2 = { version = "0.19", features = ["vendored-openssl"] }
glob = "0.3"
ignore = "0.4"
